--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
 </head>
 
 <body>
-  <h1 class ="title"> beendu - Our Website </h1>
-  <div class="description"> This is my first webpage. <em> Explanation of labu : </em>
-    he is a sweet,smart,nice and slim guy. He likes traveling, reading books and programming. He has several webpage one of them is <a href="http://www.lekhoni.com/"> Lekhoni </a>
+  <h1 class ="title"> beendu - My Website </h1>
+  <div class="description"> My name is Mahbuba. I like traveling and shopping.
+    Sometime I also like cooking. This is my first webpage. The page is called <em> beendu. </em>
+
   </div>
 <p>
-<a href="https://github.com/mkshumi">My GitHub Account </a>
+I have my github account - here is the link <a href="https://github.com/mkshumi">GitHub</a>
 </p>
-  <font color="red">Red</font>
-  <font size="5px">The letter will be five pixle </font>
+  <font color="red"> I like color red because its a primary color and we cannot change it.
+    It has also longer wavelenth.</font>
+  <font size="4px"> This font is four pixle. </font>
 
 <div class "labu">
 <div class "image"><img src= "photo.jpg" width= "300"></img>
