--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
 <p>
 I have my github account - here is the link <a href="https://github.com/mkshumi">GitHub</a>
 </p>
-  <font color="red"> I like color red because its a primary color and we cannot change it.
-    It has also longer wavelenth.</font>
-  <font size="4px"> This font is four pixle. </font>
+   <p class="red4">I like color red because its a primary color and we cannot change it.
+    It has also longer wavelenth.
+</p>
 
-<div class "labu">
-<div class "image"><img src= "photo.jpg" width= "300"></img>
+<div class="image"><img src="photo.jpg" class="w300"></img>
 </div>
 
-</div>
 
 </body>
 
