--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ I have my github account - here is the link <a href="https://github.com/mkshumi"
     It has also longer wavelenth.
 </p>
 
-<div class="image"><img src="photo.jpg" class="w300"></img>
+<div class="image"><img src="photo.jpg" alt="snow mountain" class="w300"></img>
 </div>
 
 
