--- a/index.html
+++ b/index.html
@@ -11,13 +11,68 @@
     Sometime I also like cooking. This is my first webpage. The page is called <em> beendu. </em>
 
   </div>
+
+<div class="description">
+  <pre>
+Poem: Where the Sidewalk Ends by <em>Shel Silverstein</em>
+There is a place where the sidewalk ends
+And before the street begins,
+And there the grass grows soft and white,
+And there the sun burns crimson bright,
+And there the moon-bird rests from his flight
+To cool in the peppermint wind.
+
+Let us leave this place where the smoke blows black
+And the dark street winds and bends.
+Past the pits where the asphalt flowers grow
+We shall walk with a walk that is measured and slow,
+And watch where the chalk-white arrows go
+To the place where the sidewalk ends.
+
+Yes we'll walk with a walk that is measured and slow,
+And we'll go where the chalk-white arrows go,
+For the children, they mark, and the children, they know
+The place where the sidewalk ends.
+</pre>
+</div>
+
 <p>
 I have my github account - here is the link <a href="https://github.com/mkshumi">GitHub</a>
 </p>
-   <p class="red4">I like color red because its a primary color and we cannot change it.
+<p class="red4">I like color red because its a primary color and we cannot change it.
     It has also longer wavelenth.
 </p>
+<div class="red4">
+  <pre>
+Biography of Mr. Bean(from online).
 
+Synopsis:
+English actor, comedian and screenwriter Rowan Atkinson was born on January 6, 1955.
+In 1979, Atkinson wrote for and starred in the BBC's Not the Nine O'clock News.
+His later landed a role on the television series Blackadder and subsequent spin-off TV specials.
+In 1990, he starred as his originally developed character Mr. Bean on the televison series of the same name.
+Mr. Bean was adapted for film in 1997, and received wide success.
+
+Background:
+Comic actor and writer Rowan Sebastian Atkinson was born on January 6, 1955, in Newcastle upon Tyne, Tyne and Wear, England.
+Rowan Atkinson is most famous for his roles in classic sitcoms, including Blackadder and Mr. Bean.
+Atkinson studied at Newcastle University and Oxford University, and earned a master's degree in electrical engineering.
+He got his start performing sketches while studying at Oxford, first appearing in Oxford revues at the Edinburgh Festival Fringe.
+Soon, he was entertaining at several theater clubs and on comedy shows for BBC Radio 3.
+In 1979, Atkinson wrote for and starred in the BBC's Not the Nine O'clock News.
+In 1981, Atkinson became the youngest performer to have had a one-man show in the West End.
+
+Atkinson later appeared in theatrical productions like The Nerd (1984), The New Revue (1986) and The Sneeze (1988).
+He then landed parts on such television shows as Not the Nine O'Clock News (1979-82), Blackadder (1983-89) The Thin Blue Line (1995-96) and Mr. Bean (1990-95).
+The success of Blackadder spurred the creation of the TV specials Blackadder's Christmas Carol and Blackadder: The Cavalier Years—both of which aired in 1988.
+
+In 1990, Atkinson starred as his originally developed character Mr. Bean on the TV series of the same name.
+The successful comedy series was adapted for film in 1997. Atkinson reprised his famous Mr. Bean character in a comedy sketch
+at the opening ceremony of the 2012 Summer Olympic Games. Atkinson's other film credits include Bean: the Ultimate Disaster Movie (1997),
+Johnny English (2003) and Keeping Mum (2005).
+
+</pre>
+</div>
 <div class="image"><img src="photo.jpg" alt="snow mountain" class="w300" />
 </div>
 
